[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crow_security_ng"
version = "0.1.0"
description = "A modern Python library for the Crow Cloud API - Next Generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Crow Security NG Contributors"}
]
maintainers = [
    {name = "Crow Security NG Contributors"}
]
keywords = [
    "crow",
    "security",
    "alarm",
    "home-assistant",
    "iot",
    "smart-home",
    "shepherd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.4",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/crow-security-ng/crow-security-ng"
"Bug Reports" = "https://github.com/crow-security-ng/crow-security-ng/issues"
"Source" = "https://github.com/crow-security-ng/crow-security-ng"

[tool.setuptools.packages.find]
include = ["crow_security_ng*"]

[tool.setuptools.package-data]
crow_security_ng = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["crow_security_ng"]
